# averbis-python-api

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  Makefile  README.rst  cli.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactoring.md  release.md  removal.md
.github/workflows/: python-ci-build.yml  python-publish.yml  run_tests.yml
averbis/: __init__.py  __version__.py  highlighting.py  platform.py
averbis/core/: __init__.py  _rest_client.py
averbis/highlighting/: __init__.py  _utils.py
docs/: api.rst  conf.py  index.rst
tests/: __init__.py  fixtures.py  test_client.py  test_document_collection.py  test_highlighting.py  test_pear.py  test_pear_component.py  test_pipeline.py  test_process.py  test_project.py  test_resource_container.py  utils.py
tests/resources/json/: metadata-example.json  multi-doc-example.json
tests/resources/settings/: client-settings-with-defaults.json  client-settings.json
tests/resources/texts/: text3.txt  text4.txt
tests/resources/xml/: disease_solr.xml  my-document.xmi
tests/resources/zip_test/: text2.txt
